# cloud-components

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
cloud_components/application/interface/infra/: function.py  storage.py
cloud_components/application/interface/services/: enviroment.py
cloud_components/cloud/aws/: facade.py
cloud_components/cloud/aws/factory/: event_factory.py  function_factory.py  queue_factory.py  storage_factory.py
cloud_components/cloud/aws/repository/: lambda_function.py  s3.py  sns.py  sqs.py
cloud_components/cloud/gcp/: facade.py
cloud_components/cloud/gcp/factory/: event_factory.py  queue_factory.py  (+2 more)
cloud_components/common/enums/: available_cloud.py
cloud_components/common/errors/: invalid_resource.py
cloud_components/common/interface/: facade.py  factory.py
cloud_components/infra/: factory.py
cloud_components/infra/aws/: builder.py
cloud_components/libs/env/: env.py
cloud_components/libs/log/: log.py
cloud_components/services/env/: dotenv.py
cloud_components/services/enviroment/: dotenv.py  factory.py
docker/: docker-compose.yml  gcp.Dockerfile
docker/aws/: lambda.sh  s3.sh  sns.sh  sqs.sh
src/interface/: lambda_function.py
tests/: test_sample.py
tests/infra/: test_infra_factory.py
tests/infra/aws/: test_aws_builder.py
tests/integration/infra/: test_infra_factory_integration.py
tests/services/enviroment/: test_factory.py
tests/unit/: test_enums.py  test_errors.py
tests/unit/infra/: test_infra_factory.py
tests/unit/libs/: test_env.py  test_log.py
(+50 files in other folders)
