[tool.poetry]
name = "src"
version = "1.0.0"
description = ""
authors = ["Giovani Liskoski Zanini <giovanilzanini@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.28.2"
pylint = "^2.17.4"
black = "^23.7.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
